client/css/reports.css
main .dataset {
	position: relative;
	width: 100%;
}
	main .dataset input[type=search],
	main .dataset input[type=date] {
		width: 100%;
	}
	main .dataset .options {
		position: absolute;
		background: #fff;
		z-index: 3;
		width: 100%;
		box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
		max-height: 250px;
		overflow: auto;
		border:  1px solid #ccc;
		border-top: 0;
	}
		main .dataset label {
			display: grid;
			grid-template-columns: auto 1fr;
			align-items: center;
			padding: calc(var(--gap) * 1.5);
			margin: 0;
			max-width: 100%;
			transition: background var(--transition-duration),
						box-shadow var(--transition-duration);
		}
		main .dataset label:hover {
			background: #ddd;
		}
		main .dataset label:active {
			box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.2);
		}
		main .dataset .options label.selected,
		main .dataset .options label.selected:hover {
			background: var(--color-selected);
			color: var(--color-selected-text);
		}
			main .dataset label input {
				margin: 0;
			}
		main .dataset .options header,
		main .dataset .options footer {
			background: #fff;
			position: sticky;
			font-size: 85%;
			padding: var(--gap);
			color: #999;
			display: grid;
			grid-template-columns: auto auto auto;
			grid-gap: calc(var(--gap) * 2);
			justify-content: flex-start;
			box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
		}
		main .dataset .options header {
			border-bottom: 1px dashed #999;
			top: 0;
		}
			main .dataset .options header a {
				cursor: pointer;
			}
		main .dataset .options footer {
			border-top: 1px dashed #999;
			bottom: 0;
		}
		main .dataset .options .NA {
			padding: calc(var(--gap) * 2);
			color: #999;
			text-align: center;
		}

.data-source {
	display: flex;
	flex-direction: column;
	height: 100%;
	position: relative;
}
	.data-source > .warning {
		margin: 0;
		overflow: auto;
		user-select: text;
		font-family: inherit;
		background: #f1f1f1;
		box-shadow: none;
		color: #aaa;
		flex: 1;
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
	}
		.data-source > .warning h2 {
			font-size: calc(15px + 0.8vw);
			font-weight: normal;
			margin: 10px 0;
		}
		.data-source > .warning span {
			font-size: calc(10px + 0.3vw);
			color: #bbb;
		}
		.data-source > .warning.retry:hover {
			cursor: pointer;
			background: rgba(255, 0, 0, 0.15);
		}
		.data-source > .warning.retry:active {
			box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.15);
		}
	.singleton .data-source > header {
		z-index: 7;
	}
	.data-source > header {
		display: flex;
		align-items: center;
		white-space: nowrap;
		z-index: 3;
	}
	.data-source > header::-webkit-scrollbar {
		display: none;
	}
		.data-source > header > .right {
			margin-left: auto;
		}
		.data-source > header h2 {
			font-size: 100%;
			font-weight: normal;
			white-space: nowrap;
			line-height: inherit;
			user-select: text;
			margin: 0 0 -22px 15px;
			padding: 6px 10px 6px 15px;
			background: var(--color-accent);
			color: var(--color-accent-text);
			border-radius: 4px;
			letter-spacing: 0.5px;
			overflow: auto;
			cursor: default;
			box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
		}
			.data-source > header i {
				margin-left: 5px;
			}
		.data-source > header .actions {
			height: 22px;
		}
			.data-source > header .actions > * {
				font-size: 85%;
				padding: 4px 6px;
				width: 24px;
				display: inline-block;
				text-align: center;
				color: #999;
			}
			.data-source > header .actions .card-info {
				cursor: pointer;
				padding: 4px 0;
				width: 12px;
			}
			.data-source > header .grey {
				color: #999;
			}
	.data-source .toolbar {
		background: transparent;
		padding: 0 var(--gap);
		margin: calc(var(--gap) * 2) 0;
		font-size: 95%;
		display: flex;
	}
	.data-source .toolbar::-webkit-scrollbar {
		display: none;
	}
		.data-source .toolbar > * {
			margin: 0 5px;
		}
			.data-source .toolbar .right {
				order: 2000;
			}
		.data-source .menu-toggle.selected {
			background: var(--color-accent);
			color: var(--color-accent-text);
			border-color: var(--color-accent);
		}
		.singleton .data-source .menu-toggle {
			display: none;
		}

	.data-source > .menu {
		position: absolute;
		top: 25px;
		background: #fff;
		z-index: 6;
		box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
		display: flex;
		flex-direction: column;
		width: 150px;
		font-size: 90%;
		flex-wrap: wrap;
	}
	.singleton .data-source > .menu {
		position: static;
		flex-direction: row;
		width: 100%;
		box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
		border-radius: 0;
		border-top: 20px solid #fff;
		border-bottom: 1px solid #ccc;
	}
		.data-source > .menu .item {
			position: relative;
		}
			.data-source > .menu .item .submenu {
				display: none;
				flex-direction: column;
				width: 150px;
				position: absolute;
				right: 100%;
				top: 0;
				z-index: 7;
				background: #fff;
				box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
			}
			.data-source > .menu .item:hover > .submenu {
				display: flex;
			}
			.singleton .data-source > .menu > .item > .submenu {
				top: 100%;
				right: 0;
			}
			.data-source > .menu .label {
				display: grid;
				padding: calc(var(--gap) * 2);
				grid-template-columns: 20px 1fr;
				grid-gap: calc(var(--gap) * 2);
				align-items: center;
				white-space: nowrap;
				overflow: hidden;
				text-overflow: ellipsis;
				transition: background var(--transition-duration),
							box-shadow var(--transition-duration),
							color var(--transition-duration);
			}
			.singleton .data-source > .menu .label {
				padding: 8px calc(var(--gap) * 2);
			}
			.data-source > .menu a.label {
				color: inherit;
			}
			.data-source > .menu a.label:hover {
				text-decoration: none;
			}
			.data-source > .menu .item:hover > .label {
				background: var(--color-accent);
				cursor: pointer;
				color: #fff;
			}
			.data-source > .menu .item.selected > .label {
				background: var(--color-selected);
				box-shadow: inset 5px 0px 0 0px #a9a059;
				color: #333;
			}
/* ... */

